force-app/main/default/objects/MD_OrderItem__c/MD_OrderItem__c.object-meta.xml
<CustomObject>
    <label>Customer Order Item</label>
    <nameField>
        <displayFormat>COI-{0000000000}</displayFormat>
        <label>Order Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>