force-app/main/default/objects/MD_OrderItem__c/fields/Actual_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Unit_Cost__c</fullName>
    <label>Actual Unit Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>