force-app/main/default/objects/MD_OrderItem__c/fields/Combine_Detail__c.field-meta.xml
<CustomField>
    <fullName>Combine_Detail__c</fullName>
    <formula>Material_Number__c  &amp; &quot; - &quot; &amp; Material_Description__c &amp; &quot; - &quot; &amp; Old_Material_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combine Detail</label>
    <type>Text</type>
</CustomField>