force-app/main/default/objects/MD_OrderItem__c/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <label>Condition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>