force-app/main/default/objects/MD_OrderItem__c/fields/Condition_value__c.field-meta.xml
<CustomField>
    <fullName>Condition_value__c</fullName>
    <label>Condition value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>