force-app/main/default/objects/MD_OrderItem__c/fields/Customer_Demand_Line_item__c.field-meta.xml
<CustomField>
    <fullName>Customer_Demand_Line_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Demand Line item</label>
    <referenceTo>Customer_Demand_Line_item__c</referenceTo>
    <relationshipName>Customer_Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>