force-app/main/default/objects/MD_OrderItem__c/fields/Customer_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Status__c</fullName>
    <formula>TEXT( OrderId__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Order Status</label>
    <type>Text</type>
</CustomField>