force-app/main/default/objects/MD_OrderItem__c/fields/Customer_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Customer_Remarks__c</fullName>
    <label>Customer Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>