force-app/main/default/objects/MD_OrderItem__c/fields/External_Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Line_Item_Number__c</fullName>
    <label>External Line Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>