force-app/main/default/objects/MD_OrderItem__c/fields/External_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Order_ID__c</fullName>
    <label>External Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>