force-app/main/default/objects/MD_OrderItem__c/fields/GST_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>GST_Per_Unit__c</fullName>
    <label>GST Per Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>