force-app/main/default/objects/MD_OrderItem__c/fields/Landing_Cost_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Landing_Cost_Per_Unit__c</fullName>
    <label>Landing Cost Per Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>