force-app/main/default/objects/MD_OrderItem__c/fields/Market_Price__c.field-meta.xml
<CustomField>
    <fullName>Market_Price__c</fullName>
    <label>Market Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>