force-app/main/default/objects/MD_OrderItem__c/fields/Material_Size_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Material_Size_Dimensions__c</fullName>
    <formula>Product2Id__r.Size_Dimensions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Size/Dimensions</label>
    <type>Text</type>
</CustomField>