force-app/main/default/objects/MD_OrderItem__c/fields/Old_Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_Material_Number__c</fullName>
    <formula>Product2Id__r.Old_Material_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Material Number</label>
    <type>Text</type>
</CustomField>