force-app/main/default/objects/MD_OrderItem__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>Customer Order</label>
    <referenceTo>MD_Order__c</referenceTo>
    <relationshipName>CustmerOrderItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>