force-app/main/default/objects/MD_OrderItem__c/fields/OriginalOrderItemId__c.field-meta.xml
<CustomField>
    <fullName>OriginalOrderItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Order Product</label>
    <referenceTo>MD_OrderItem__c</referenceTo>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>