force-app/main/default/objects/MD_OrderItem__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Master</label>
    <referenceTo>MD_Product2__c</referenceTo>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>