force-app/main/default/objects/MD_OrderItem__c/fields/QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>MD_Quote_Line_Item__c</referenceTo>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>