force-app/main/default/objects/MD_OrderItem__c/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>