force-app/main/default/objects/MD_OrderItem__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <label>Storage Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3301 - Cold Room</fullName>
            </value>
            <value>
                <fullName>3302 - Culture Media RM</fullName>
            </value>
            <value>
                <fullName>3303 - Demo Korangi WH</fullName>
            </value>
            <value>
                <fullName>3304 - Dispensing Area</fullName>
            </value>
            <value>
                <fullName>3305 - Flammable Hall</fullName>
            </value>
            <value>
                <fullName>3306 - Flammable Hall S</fullName>
            </value>
            <value>
                <fullName>3307 - Flammable Hall R</fullName>
            </value>
            <value>
                <fullName>3308 - Flammable Temp</fullName>
            </value>
            <value>
                <fullName>3309 - Freezer -20 Degr</fullName>
            </value>
            <value>
                <fullName>3310 - KWH Secure</fullName>
            </value>
            <value>
                <fullName>3311 - Millipore</fullName>
            </value>
            <value>
                <fullName>3312 - Millipore Shelve</fullName>
            </value>
            <value>
                <fullName>3313 - Millipore In-T/D</fullName>
            </value>
            <value>
                <fullName>3314 - Mix Grp Mat Hall</fullName>
            </value>
            <value>
                <fullName>3315 - Packaging Mat RM</fullName>
            </value>
            <value>
                <fullName>3316 - Pigment Room</fullName>
            </value>
            <value>
                <fullName>3317 - Expired</fullName>
            </value>
            <value>
                <fullName>3318 - Toxic/Corrsve-H</fullName>
            </value>
            <value>
                <fullName>3319 - Toxic/Corrsve-HS</fullName>
            </value>
            <value>
                <fullName>3320 - CS–Spr Parts KHI</fullName>
            </value>
            <value>
                <fullName>3321 - CS–Spr Parts ISB</fullName>
            </value>
            <value>
                <fullName>3322 - Main Store</fullName>
            </value>
            <value>
                <fullName>3323 - Free of Charge</fullName>
            </value>
            <value>
                <fullName>3330 - Agility – 3PWH</fullName>
            </value>
            <value>
                <fullName>3326 - Medical Device</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>