force-app/main/default/objects/MD_OrderItem__c/fields/Total_Available_Stock__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Stock__c</fullName>
    <label>Total Available Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>