force-app/main/default/objects/MD_OrderItem__c/fields/Total_Landing_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Landing_Cost__c</fullName>
    <label>Total Landing Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>