force-app/main/default/objects/MD_OrderItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product2Id__c</columns>
    <columns>Price__c</columns>
    <columns>OrderId__c</columns>
    <columns>Quantity__c</columns>
    <columns>TotalPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>